fix contrast for course listing favorite icon
Fixes: CNVS-27871

test plan:
- as a user with the old and/or new ui
- navigate to the course listing page /courses ("all courses")
- there should now be an outlined version of the star and once
  clicked it will fill to a solid golden
- example: http://screencast.com/t/g1vpLc78NSbZ

note:
- product design asked that the dashcard cog icon be swapped
  out for the paper/pencil icon so that was addressed on
  this ticket as well (http://screencast.com/t/hKw3AHLi)

Reviewed-on: https://gerrit.instructure.com/74220
Product-Review: Chris Hart <chart@instructure.com>
QA-Review: Pierce Arner <pierce@instructure.com>
Tested-by: Jenkins

--- a/app/stylesheets/bundles/course_list.scss
+++ b/app/stylesheets/bundles/course_list.scss
@@ -7,7 +7,9 @@
   /* Column widths are based on these cells */
   .course-list-star-column {
     width: 3%;
-    color: $ic-color-icon-disabled;
+    &.course-list-favorite-icon {
+      color: $ic-color-icon-disabled;
+    }
   }
   .course-list-term-column,
   .course-list-enrolled-as-column {
@@ -24,15 +26,14 @@
   .course-list-group-column {
     width: 35%;
   }
-
   .course-list-no-left-border {
     border-left: 0;
   }
-
   .course-list-table-row:hover {
     background-color: $lightBackground;
   }
 }
+
 .course-list-table td {
   white-space: nowrap;
   overflow: hidden;
